update member header function

--- a/src/main/webapp/WEB-INF/member/fixed-member-navbar.html
+++ b/src/main/webapp/WEB-INF/member/fixed-member-navbar.html
@@ -81,7 +81,7 @@
 						alt="">您好！<span id="member_name"> </span>
 				</button>
 				<div class="dropdown-menu pull-right animated flipInX" id="showing">
-					<a href="./member/member-details.html"><i class="fa-solid fa-gauge"></i>個人資料</a>
+					<a href="http://localhost:8080/chill-tribe/member/member-details.html"><i class="fa-solid fa-gauge"></i>個人資料</a>
 					<a href=" " id="btn_logout"><i class="fa-solid fa-power-off"></i>登出</a>
 				</div>
 			</div>
@@ -149,7 +149,8 @@
 		localStorage.clear();
 		document.cookie = "JSESSIONID=; Path=/chill-tribe; Expires=Thu, 01 Jan 1970 00:00:00 GMT;";
 
-		fetch(`member/logout`, {
+		fetch(`http://localhost:8080/chill-tribe/member/logout`, {
+// 		fetch(`member/logout`, {
 			method: 'DELETE'
 		});
 	});
