member feach edit absolute path is OK.

--- a/src/main/webapp/WEB-INF/member/forgot-password.html
+++ b/src/main/webapp/WEB-INF/member/forgot-password.html
@@ -174,7 +174,7 @@
 <script>
 	$('#btn_forgetpassword').on("click", function () {
 		console.log("忘記密碼按鈕觸發");
-		fetch('forgetpassword', {
+		fetch(`http://localhost:8080/chill-tribe/member/forgetpassword`, {
 			method: 'PUT',
 			headers: {
 				'Content-Type': 'application/json'
