--- a/src/main/webapp/WEB-INF/member/login.html
+++ b/src/main/webapp/WEB-INF/member/login.html
@@ -173,7 +173,7 @@
 				if (data.successful) {
 					console.log("登入成功");
 					if (data.memberid) {
-// 						sessionStorage.setItem('memberid', data.memberid);
+						sessionStorage.setItem('memberid', data.memberid);
 						localStorage.setItem('memberid', data.memberid);
 						console.log('memberid 已儲存到 sessionStorage:', data.memberid);
 					}
