--- a/src/main/webapp/WEB-INF/member/member-change-password.html
+++ b/src/main/webapp/WEB-INF/member/member-change-password.html
@@ -215,7 +215,7 @@
 				});
 			};
 
-			fetch('membereditpassword', {
+			fetch(`http://localhost:8080/chill-tribe/member/membereditpassword`, {
 				method: 'PUT',
 				headers: {
 					'Content-Type': 'application/json'
@@ -226,19 +226,28 @@
 				}),
 
 			})
-			// 			.then(resp => {
-			// 			 return resp.json();
-			// 		 })
-			// 		 .then(body => {
-			// 			 const { successful, errMsg } = body;
-			// 			 if (body.successful) {
-			// 				console.log("恭喜，個資修改成功囉！！！");
-			// 				Swal.fire({
-			// 					  icon: "success",
-			// 					  title: "恭喜",
-			// 					  text: "個資修改成功囉！",
-			// 					});
-			// 			 }
+				.then(resp => {
+					return resp.json();
+				})
+				.then(body => {
+					const { successful, errMsg } = body;
+					if (body.successful) {
+						console.log("恭喜，密碼修改成功囉！！！");
+						Swal.fire({
+							icon: "success",
+							title: "恭喜",
+							text: "密碼修改成功囉！",
+						});
+					}else {
+						console.log("OH~NO...您密碼修改失敗了！！！");
+						// 				 alert('OH~不，個資修改失敗...');
+						Swal.fire({
+							icon: "error",
+							title: "Oh...糟糕",
+							text: "密碼修改失敗...",
+						});
+					}
+				});
 		});
 
 
