--- a/src/main/webapp/WEB-INF/supplier/supplierIndexSidebar.html
+++ b/src/main/webapp/WEB-INF/supplier/supplierIndexSidebar.html
@@ -69,7 +69,7 @@
             </a>
             <ul class="nav nav-treeview">
               <li class="nav-item">
-                <a href="#" class="nav-link">
+                <a href="./apply-activity.html" class="nav-link">
                   <p>活動上架申請</p>
                 </a>
               </li>
@@ -111,7 +111,7 @@
       
 
           <li class="nav-item">
-            <a href="./supplier_account.html" class="nav-link">
+            <a href="./supplier-account.html" class="nav-link">
               <i class="bi bi-person-fill-gear"></i>
               <p>帳號/檔案管理</p>
             </a>
@@ -148,3 +148,4 @@
       </nav>
     </div>
 </aside>
+
