--- a/src/main/webapp/WEB-INF/supplier/supplierlogin.html
+++ b/src/main/webapp/WEB-INF/supplier/supplierlogin.html
@@ -56,11 +56,11 @@
         </div>
       </form>
 
-      <div class="social-auth-links text-center mt-2 mb-3">
-        <a href="#" class="btn btn-block btn-danger">
-          <i class="fab fa-google-plus mr-2"></i> 使用Google登入
-        </a>
-      </div>
+<!--       <div class="social-auth-links text-center mt-2 mb-3"> -->
+<!--         <a href="#" class="btn btn-block btn-danger"> -->
+<!--           <i class="fab fa-google-plus mr-2"></i> 使用Google登入 -->
+<!--         </a> -->
+<!--       </div> -->
       <!-- /.social-auth-links -->
 
       <p class="mb-1">
