fix member sessionstorage method

--- a/src/main/webapp/WEB-INF/activity/single-activity.html
+++ b/src/main/webapp/WEB-INF/activity/single-activity.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 		
-        <title>Resido - Residence & Real Estate HTML Template</title>	
+        <title>ChillTribe - 活動細節</title>	
 		
         <!-- Custom CSS -->
         <link href="../Full_Resido/_html/assets/css/styles.css" rel="stylesheet">
@@ -595,6 +595,9 @@
 		<!----- 載入地址和郵遞區號 ----->
 		<script src="./js/address.js"></script>
 		<script src="./js/single-activity.js"></script>
+
+		<!----- 載入第三方的提醒視窗 ----->
+		<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 		<!-- ============================================================== -->
 		<!-- This page plugins -->
 		<!-- ============================================================== -->
