--- a/src/main/webapp/WEB-INF/member/fixed-member-navbar.html
+++ b/src/main/webapp/WEB-INF/member/fixed-member-navbar.html
@@ -40,13 +40,13 @@
 
         </li>
 
-        <li><a href="../activity/about-us.html">客服中心<span class="submenu-indicator"></span></a>
+        <li><a href="../general-info/contact.html">客服中心<span class="submenu-indicator"></span></a>
         </li>
 
-        <li><a href="../activity/faq.html">常見問題<span class="submenu-indicator"></span></a>
+        <li><a href="../general-info/faq.html">常見問題<span class="submenu-indicator"></span></a>
         </li>
 
-        <li><a href="../activity/about-us.html">關於我們<span class="submenu-indicator"></span></a>
+        <li><a href="../general-info/about-us.html">關於我們<span class="submenu-indicator"></span></a>
         </li>
 
         <li><a href="../shoppingcart/shopping-cart.html">購物車<span class="submenu-indicator"></span></a>
