--- a/src/main/webapp/WEB-INF/supplier/suppliers-intro.html
+++ b/src/main/webapp/WEB-INF/supplier/suppliers-intro.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 		
-        <title>Resido - Residence & Real Estate HTML Template</title>	
+        <title>ChillTribe - 供應商資料</title>	
 		
         <!-- Custom CSS -->
         <link href="./_html/assets/css/styles.css" rel="stylesheet">
