--- a/src/main/webapp/WEB-INF/supplier/activitySpList.html
+++ b/src/main/webapp/WEB-INF/supplier/activitySpList.html
@@ -314,11 +314,11 @@
 
   function fetchSupplierId() {
     let SupplierData = { supplierId: 1 };
-    sessionStorage.setItem('SupplierData', JSON.stringify(SupplierData));
+    localStorage.setItem('SupplierData', JSON.stringify(SupplierData));
 
     console.log("已存入:", SupplierData); // 確認存入
 
-    const supplierData = sessionStorage.getItem('SupplierData');
+    const supplierData = localStorage.getItem('SupplierData');
     if (supplierData) {
       return JSON.parse(supplierData);
     }
@@ -432,10 +432,9 @@
       })
         .then((response) => {
           if (response.ok) {
-            alert("活動已取消！");
             fetchAllActivity($('#example1').DataTable());
           } else {
-            alert("取消活動失敗！");
+            console.log("取消活動失敗！");
           }
         })
         .catch((error) => {
