--- a/src/main/webapp/WEB-INF/supplier/supplierIndexSidebar.html
+++ b/src/main/webapp/WEB-INF/supplier/supplierIndexSidebar.html
@@ -74,7 +74,7 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a href="./activityList.html" class="nav-link">
+                <a href="./activitySpList.html" class="nav-link">
                   <p>活動列表</p>
                 </a>
               </li>
