--- a/src/main/webapp/WEB-INF/order/order-details.html
+++ b/src/main/webapp/WEB-INF/order/order-details.html
@@ -79,9 +79,9 @@
 
 									<div class="col-md-6 col-lg-6">
 										<ul class="booking-detail-list">
-											<li><b>訂單編號</b><span id="order-serial">ORD00001</span></li>
-											<li><b>聯絡信箱</b><span id="contact-mail">themezhub@gmail.com</span></li>
-											<li><b>訂單狀態</b><span id="order-status">已付款</span></li>
+											<li><b>訂單編號</b><span id="order-serial"></span></li>
+											<li><b>聯絡信箱</b><span id="contact-mail"></span></li>
+											<li><b>訂單狀態</b><span id="order-status"></span></li>
 											<li><b>訂單成立時間</b><span id="order-datetime"></span></li>
 											<br>
 										</ul>
@@ -89,15 +89,15 @@
 
 									<div class="col-md-6 col-lg-6">
 										<ul class="booking-detail-list">
-											<li><b>訂單聯絡人</b><span id="contact-person">Shaurya</span></li>
-											<li><b>聯絡電話</b><span id="contact-phone">91 235 458 7458</span></li>
-											<li><b>付款方式</b><span id="payment_method">信用卡</span></li>
+											<li><b>訂單聯絡人</b><span id="contact-person"></span></li>
+											<li><b>聯絡電話</b><span id="contact-phone"></span></li>
+											<li><b>付款方式</b><span id="payment_method"></span></li>
 										</ul>
 									</div>
 									<div class="col-lg-12 col-md-12 col-sm-12">
 										<div class="form-group">
 											<b>特殊需求</b>
-											<textarea id="requirement" class="form-control" disabled>我是奧客</textarea>
+											<textarea id="requirement" class="form-control" disabled></textarea>
 										</div>
 									</div>
 
