--- a/src/main/webapp/WEB-INF/member/member-register.html
+++ b/src/main/webapp/WEB-INF/member/member-register.html
@@ -128,18 +128,6 @@
 												</div>
 											</tr>
 
-
-											<!-- <div class="col-lg-6 col-md-6 mb-3">
-												<div class="form-group">
-													<label>Signup As</label>
-													<select class="form-control">
-														<option>As a Customer</option>
-														<option>As a Agent</option>
-														<option>As a Agency</option>
-													</select>
-												</div>
-											</div> -->
-
 										</div>
 
 										<div class="form-group">
@@ -150,13 +138,6 @@
 
 								</form>
 							</div>
-
-							<!-- 								<div class="modal-divider"><span>或透過以下方式註冊</span></div> -->
-							<!-- 								<div class="social-login mb-3"> -->
-							<!-- 									<ul> -->
-							<!-- 										<li><a href="#" class="btn connect-google"><i class="ti-google"></i>Google+</a></li> -->
-							<!-- 									</ul> -->
-							<!-- 								</div> -->
 
 						</div>
 					</div>
@@ -224,8 +205,9 @@
 	<!-- <script src="./_html/assets/js/loginmodal.js"></script> -->
 	<!-- <script src="../Full_Resido/_html/assets/js/loginmodal.js"></script> -->
 	<script src="./js/loginmodal.js"></script>
+	<!-- 註冊JS開始 -->
 	<script src="./js/member-register.js"></script>
-
+	<!-- 註冊JS結束 -->
 
 	<!-- ============================================================== -->
 	<!-- This page plugins -->
