orderlist about 60% done, but need to re-modify layout

--- a/src/main/webapp/WEB-INF/order/order-lists.html
+++ b/src/main/webapp/WEB-INF/order/order-lists.html
@@ -79,84 +79,86 @@
 								style="display: flex; justify-content: space-between; align-items: center;">
 								<h4 class="block-title">訂單資訊</h4>
 							</div>
-
-							<table class="property-table-wrap responsive-table bkmark">
-								<tbody id="order-list">
-									<!-- Item #1 -->
-									<tr class="order-item">
-										<td class="property-container" style="padding-left: 0;">
-											<img src="https://placehold.co/1200x800" alt="">
-											<ul class="title" style="padding-left: 0; width: 1rem;">
-												<li>
-													<h4><a href="#">活動標題</a></h4>
-												</li>
-												<li><span>訂單編號</span></li>
-												<li><span>訂購日期</span></li>
-												<li><span>開始日期</span></li>
-											</ul>
-										</td>
-										<td style="padding-left: 0;">
-											<div class="title">
+							<div id="order-item-lists">
+								<table class="property-table-wrap responsive-table bkmark">
+									<tbody id="order-list">
+										<!-- Item #1 -->
+										<tr class="order-item">
+											<td class="property-container" style="padding-left: 0;">
+												<img src="https://placehold.co/1200x800" alt="">
+												<ul class="title" style="padding-left: 0; width: 1rem;">
+													<li>
+														<h4><a href="#">活動標題</a></h4>
+													</li>
+													<li><span>訂單編號</span></li>
+													<li><span>訂購日期</span></li>
+													<li><span>開始日期</span></li>
+												</ul>
+											</td>
+											<td style="padding-left: 0;">
+												<div class="title">
+													<div style="height: 1.5rem;"></div>
+													<div style="height: 1.7rem;">ORD00001</div>
+													<div style="height: 1.7rem;">2025-01-15</div>
+													<div style="height: 1.7rem;">2025-02-15</div>
+												</div>
+											</td>
+											<td>
 												<div style="height: 1.5rem;"></div>
-												<div style="height: 1.7rem;">ORD00001</div>
-												<div style="height: 1.7rem;">2025-01-15</div>
-												<div style="height: 1.7rem;">2025-02-15</div>
-											</div>
-										</td>
-										<td>
-											<div style="height: 1.5rem;"></div>
-											<div><span class="ticket-amount" style="padding-top: 0.7rem;"
-													data-price="900">票券共計： </span><b>2</b><b> 張</b></div>
-											<div style="height: 1.5rem;"></div>
-											<div><span class="table-property-price"
-													style="padding-top: 0.7rem;" data-price=" 900">總額：</span><b> TWD$
-												</b><b>1000</b></div>
-										</td>
-										<td class="status">
-											<span class="label bg-light-purple text-purple">未使用</span>
-										</td>
-									</tr>
-								</tbody>
-							</table>
-
-							<table class="property-table-wrap responsive-table bkmark">
-								<tbody id="order-list">
-									<!-- Item #1 -->
-									<tr class="order-item">
-										<td class="property-container" style="padding-left: 0;">
-											<img src="https://placehold.co/1200x800" alt="">
-											<ul class="title" style="padding-left: 0; width: 1rem;">
-												<li>
-													<h4><a href="#">活動標題</a></h4>
-												</li>
-												<li><span>訂單編號</span></li>
-												<li><span>訂購日期</span></li>
-												<li><span>開始日期</span></li>
-											</ul>
-										</td>
-										<td style="padding-left: 0;">
-											<div class="title">
+												<div><span class="ticket-amount" style="padding-top: 0.7rem;"
+														data-price="900">票券共計： </span><b>2</b><b> 張</b></div>
 												<div style="height: 1.5rem;"></div>
-												<div style="height: 1.7rem;">ORD00001</div>
-												<div style="height: 1.7rem;">2025-01-15</div>
-												<div style="height: 1.7rem;">2025-02-15</div>
-											</div>
-										</td>
-										<td>
-											<div style="height: 1.5rem;"></div>
-											<div><span class="ticket-amount" style="padding-top: 0.7rem;"
-													data-price="900">票券共計： </span><b>2</b><b> 張</b></div>
-											<div style="height: 1.5rem;"></div>
-											<div><span class="table-property-price"
-													style="padding-top: 0.7rem;" data-price=" 900">總額：</span><b> TWD$
-												</b><b>1000</b></div>
-										</td>
-										<td class="status">
-											<span class="label bg-light-purple text-purple">未使用</span>
-										</td>
-									</tr>
-								</tbody>
-							</table>
+												<div><span class="table-property-price" style="padding-top: 0.7rem;"
+														data-price=" 900">總額：</span><b> TWD$
+													</b><b>1000</b></div>
+											</td>
+											<td class="status">
+												<span class="label bg-light-purple text-purple">未使用</span>
+											</td>
+										</tr>
+									</tbody>
+								</table>
+								<table class="property-table-wrap responsive-table bkmark">
+									<tbody id="order-list">
+										<!-- Item #1 -->
+										<tr class="order-item">
+											<td class="property-container" style="padding-left: 0;">
+												<img src="https://placehold.co/1200x800" alt="">
+												<ul class="title" style="padding-left: 0; width: 1rem;">
+													<li>
+														<h4><a href="#">活動標題</a></h4>
+													</li>
+													<li><span>訂單編號</span></li>
+													<li><span>訂購日期</span></li>
+													<li><span>開始日期</span></li>
+												</ul>
+											</td>
+											<td style="padding-left: 0;">
+												<div class="title">
+													<div style="height: 1.5rem;"></div>
+													<div style="height: 1.7rem;">ORD00001</div>
+													<div style="height: 1.7rem;">2025-01-15</div>
+													<div style="height: 1.7rem;">2025-02-15</div>
+												</div>
+											</td>
+											<td>
+												<div style="height: 1.5rem;"></div>
+												<div><span class="ticket-amount" style="padding-top: 0.7rem;"
+														data-price="900">票券共計： </span><b>2</b><b> 張</b></div>
+												<div style="height: 1.5rem;"></div>
+												<div><span class="table-property-price" style="padding-top: 0.7rem;"
+														data-price=" 900">總額：</span><b> TWD$
+													</b><b>1000</b></div>
+											</td>
+											<td class="status">
+												<span class="label bg-light-purple text-purple">未使用</span>
+											</td>
+										</tr>
+									</tbody>
+								</table>
+							</div>
+
+							
 						</div>
 					</div>
 
