add order related redirect <a>

--- a/src/main/webapp/WEB-INF/order/order-details.html
+++ b/src/main/webapp/WEB-INF/order/order-details.html
@@ -105,7 +105,7 @@
 									<div class="col-lg-12 col-md-12 col-sm-12">
 										<div class="form-group text-center">
 											<hr>
-											<a href="#" class="btn btn-primary rounded full-width">瀏覽訂單</a>
+											<a href="http://localhost:8080/chill-tribe/order/order-lists.html" class="btn btn-primary rounded full-width">瀏覽訂單</a>
 										</div>
 									</div>
 
