--- a/src/main/webapp/WEB-INF/activity/single-activity.html
+++ b/src/main/webapp/WEB-INF/activity/single-activity.html
@@ -90,7 +90,7 @@
 								<div class="prt-detail-title-desc">
 									<span class="label text-light bg-success" id="category-2">運動</span>
 									<h3 id="activityName-1">一起來打羽球吧!</h3>
-									<span id="districtId"><i class="lni-map-marker"></i> 大安公園</span>
+									<span id="city-1"><i class="lni-map-marker"></i> 大安公園</span>
 									<h3 class="prt-price-fix text-primary"><sub>$</sub>
 										<span id="unitPrice-1">50</span><sub>/人</sub></h3>
 								</div>
@@ -153,7 +153,7 @@
 													<h2 class="mb-0">
 														<button type="button" class="btn btn-link collapsed" data-bs-toggle="collapse" 
 														data-bs-target="#secondfloor" aria-controls="secondfloor" style="cursor: default; 
-														user-select: text;">活動城市<span id="cityId">大安公園</span></button>
+														user-select: text;">活動城市<span id="city-2">大安公園</span></button>
 													</h2>
 												</div>
 											</div>
