--- a/src/main/webapp/WEB-INF/supplier/apply-activity.html
+++ b/src/main/webapp/WEB-INF/supplier/apply-activity.html
@@ -34,7 +34,7 @@
   <!-- 引入bootstrap iocn CDN方式 -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
   <!-- Apply_activity style -->
-  <link rel="stylesheet" href="./css/apply_activity.css">
+  <link rel="stylesheet" href="./css/apply-activity.css">
 </head>
 <body class="hold-transition sidebar-mini layout-fixed">
 <div class="wrapper">
@@ -421,7 +421,7 @@
 <script src="./js/supplierIndex.js"></script>
 
 <!----- 接收後端的資料 ----->
-<script src="js/apply_activity.js"></script>
+<script src="js/apply-activity.js"></script>
 
 <!----- 預覽圖片區域 ----->
 <script>
